RESULTS/AutoSpec/raw_results/out-4o-oopsla/09_0003/09_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/09_0003/09_merged.c:59:3: error: unterminated comment
   59 |   /*@;
      |   ^
